Apply suggestions from code review
Co-authored-by: Joel Lappalainen <lappalj8@gmail.com>